--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "27.0.0"
+    compileSdkVersion 28
     defaultConfig {
         applicationId "me.nkkumawat.chatzzz"
         minSdkVersion 15
@@ -21,15 +20,21 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     //noinspection GradleCompatible
-    compile 'com.android.support:cardview-v7:23.3.+'
-    compile('io.socket:socket.io-client:0.8.3') {
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.vatsal.imagezoomer:image-zoomer:1.0.2'
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:23.3.+'
+
+    implementation 'com.twotoasters.SectionCursorAdapter:library:2.0.0'
+    implementation ('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
     }
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
