--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="me.nkkumawat.chatzzz">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,18 +27,30 @@
             </intent-filter>
         </activity>
         <activity android:name=".UI.Signup" />
-        <activity android:name=".UI.Home" />
 
         <receiver android:name=".Utility.InternetCheck">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
+        <receiver
+            android:name=".Utility.DatabaseChangedReceiver"
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="me.nkkumawat.chatzzz.Utility.DATABASE_CHANGED"></action>
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".Utility.DataDeleteListener"
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="me.nkkumawat.chatzzz.Utility.DATA_DELETE"></action>
+            </intent-filter>
+        </receiver>
 
         <service
             android:name=".Services.MessageCheckService"
             android:enabled="true" />
-
         <activity
             android:name=".UI.ChatHome"
             android:label="@string/title_activity_chat_home"
